--- a/API-Gateway/template/onboard.html
+++ b/API-Gateway/template/onboard.html
@@ -1,4 +1,4 @@
-<div dir="ltr" style="text-align: left;" trbidi="on">
+<!-- <div dir="ltr" style="text-align: left;" trbidi="on">
     <script>
       (function(d, s, id) {
         var js, ref = d.getElementsByTagName(s)[0];
@@ -12,4 +12,4 @@
       }(document, "script", "paypal-js"));
     </script>
     <a data-paypal-button="true" href="{{.Action_URL}}&displayMode=minibrowser" target="PPFrame">Sign up for PayPal</a>
-  </div>
+  </div> -->
