updated image version

--- a/API-Gateway/template/index.html
+++ b/API-Gateway/template/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PayPal Multiparty Payment</title>
-    <link rel="stylesheet" href="http://gigforge.jasim.online/template/styles.css">
+    <link rel="stylesheet" href="https://gigforge.jasim.online/template/styles.css">
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,6 @@
         </div>
     </div>
 
-    <script src="http://gigforge.jasim.online/template/app.js"></script>
+    <script src="https://gigforge.jasim.online/template/app.js"></script>
 </body>
 </html>
